Added new dependency for oauth: from 1.0.0.M2 to M3. Did not include the M4, because that breaks the package structure.

--- a/security/pom.xml
+++ b/security/pom.xml
@@ -36,7 +36,7 @@
         <dependency>
             <groupId>org.springframework.security.oauth</groupId>
             <artifactId>spring-security-oauth</artifactId>
-            <version>1.0.0.M2</version>
+            <version>1.0.0.M3</version>
         </dependency>
         <dependency>
             <groupId>org.mongodb</groupId>
@@ -50,6 +50,14 @@
             <scope>test</scope>
         </dependency>
     </dependencies>
+
+    <repositories>
+        <repository>
+            <id>oss</id>
+            <name>Sonatype</name>
+            <url>https://oss.sonatype.org/content/repositories/springsource-milestones/</url>
+        </repository>
+    </repositories>
 
 
 <!--
