Added a different repository for the oath2 artifact.

--- a/pom.xml
+++ b/pom.xml
@@ -78,7 +78,7 @@
 
     <organization>
         <name>International Institute of Social History</name>
-        <url>http://www.iish.nl/</url>
+        <url>http://www.socialhistoryservices.org/</url>
     </organization>
 
     <properties>
