--- a/security/pom.xml
+++ b/security/pom.xml
@@ -59,34 +59,10 @@
         </repository>
     </repositories>
 
-
-<!--
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.apache.maven.plugins</groupId>
-                <artifactId>maven-shade-plugin</artifactId>
-                <version>1.4</version>
-                <executions>
-                    <execution>
-                        <phase>package</phase>
-                        <goals>
-                            <goal>shade</goal>
-                        </goals>
-                        <configuration>
-                            <transformers>
-                                <transformer
-                                        implementation="org.apache.maven.plugins.shade.resource.ManifestResourceTransformer">
-                                    <mainClass>org.socialhistoryservices.security.User</mainClass>
-                                </transformer>
-                            </transformers>
-                        </configuration>
-                    </execution>
-                </executions>
-            </plugin>
-        </plugins>
-    </build>
--->
+    <organization>
+        <name>International Institute for Social History</name>
+        <url>http://socialhistoryservices.org/</url>
+    </organization>
 
     <properties>
         <jdkLevel>1.6</jdkLevel>
