--- a/server/pom.xml
+++ b/server/pom.xml
@@ -137,13 +137,6 @@
             <artifactId>spring-beans</artifactId>
             <version>${spring.version}</version>
         </dependency>
-<!--
-        <dependency>
-            <groupId>org.springframework</groupId>
-            <artifactId>spring-jdbc</artifactId>
-            <version>${spring.version}</version>
-        </dependency>
--->
         <dependency>
             <groupId>org.springframework</groupId>
             <artifactId>spring-context</artifactId>
@@ -154,20 +147,6 @@
             <artifactId>spring-test</artifactId>
             <version>${spring.version}</version>
         </dependency>
-<!--
-        <dependency>
-            <groupId>postgresql</groupId>
-            <artifactId>postgresql</artifactId>
-            <version>8.4-701.jdbc3</version>
-        </dependency>
--->
-<!--
-        <dependency>
-            <groupId>c3p0</groupId>
-            <artifactId>c3p0</artifactId>
-            <version>0.9.1.2</version>
-        </dependency>
--->
         <dependency>
             <groupId>org.mortbay.jetty</groupId>
             <artifactId>servlet-api-2.5</artifactId>
@@ -192,7 +171,7 @@
         <dependency>
             <groupId>org.springframework.security.oauth</groupId>
             <artifactId>spring-security-oauth</artifactId>
-            <version>1.0.0.M2</version>
+            <version>1.0.0.M3</version>
         </dependency>
         <dependency>
             <groupId>net.handle</groupId>
@@ -206,8 +185,16 @@
         </dependency>
     </dependencies>
 
+    <repositories>
+        <repository>
+            <id>oss</id>
+            <name>Sonatype</name>
+            <url>https://oss.sonatype.org/content/repositories/springsource-milestones/</url>
+        </repository>
+    </repositories>
+
     <organization>
-        <name>Hope Consortium</name>
+        <name>International Institute for Social History</name>
         <url>http://socialhistoryservices.org/</url>
     </organization>
 
