--- a/pom.xml
+++ b/pom.xml
@@ -81,10 +81,37 @@
         <url>http://www.socialhistoryservices.org/</url>
     </organization>
 
+    <repositories>
+        <repository>
+            <id>spring-milestone</id>
+            <name>Spring Framework Milestone Repository</name>
+            <url>http://s3.amazonaws.com/maven.springframework.org/milestone</url>
+        </repository>
+        <repository>
+            <id>spring-release</id>
+            <name>Spring Framework Release Repository</name>
+            <url>http://maven.springframework.org/release</url>
+        </repository>
+        <repository>
+            <!-- necessary for Spring Security 3.1.0.CI-SNAPSHOT dependency -->
+            <id>repository.springframework.maven.snapshot</id>
+            <name>Spring Framework Maven Release Repository</name>
+            <url>http://maven.springframework.org/snapshot</url>
+        </repository>
+        <repository>
+            <id>oauth.googlecode.net</id>
+            <url>http://oauth.googlecode.com/svn/code/maven/</url>
+        </repository>
+    </repositories>
+
     <properties>
         <jdkLevel>1.6</jdkLevel>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
+        <spring.version>3.1.1.RELEASE</spring.version>
+        <spring.security.version>3.1.0.RELEASE</spring.security.version>
+        <spring.ws.version>2.0.5.RELEASE</spring.ws.version>
+        <oauth.version>1.0.0.M6</oauth.version>
     </properties>
 
 </project>
