Prepare LDAP configuration and example for a simple PID bind

--- a/pid.properties
+++ b/pid.properties
@@ -45,10 +45,19 @@ clientDetails.clientId=socialhistoryservices.org
 # Webservice proxy url
 #
 proxy.locationUri=http://localhost:8282/secure/
-#proxy.locationUri=https://pid.dev.objectrepository.nl:443/pid/secure/
 
 #
 # Where the log4j.xml is that is to be used for logging configuration.
 # Logs are identical
 #
 log4j.xml=log4j.xml
+
+ldap-authentication-provider.user-search-filter=(uid={0})
+ldap-authentication-provider.user-search-base=ou=users
+ldap-authentication-provider.group-search-filter=(uniqueMember={0})
+ldap-authentication-provider.group-search-base=ou=groups
+ldap-authentication-provider.group-role-attribute=cn
+ldap-authentication-provider.role-prefix=ROLE_
+ldap-server.url=ldap://localhost:10389/o=mojo
+ldap-server.manager-dn=uid=admin,ou=system
+ldap-server.manager-password=12345
