Added LDAP support

--- a/server/src/main/webapp/WEB-INF/pid.properties
+++ b/server/src/main/webapp/WEB-INF/pid.properties
@@ -44,14 +44,13 @@ clientDetails.clientId=socialhistoryservices.org
 #
 # Webservice proxy url
 #
-proxy.locationUri=http://localhost:8282/secure/
-#proxy.locationUri=https://pid.dev.objectrepository.nl:443/pid/secure/
+proxy.locationUri=http://localhost:8080/secure/
 
 #
 # Where the log4j.xml is that is to be used for logging configuration.
 # Logs are identical
 #
-log4j.xml=log4j.xml
+log4j.xml=/Users/lwo/desktop/log4j.xml
 
 ldap-authentication-provider.user-search-filter=(cn={0})
 ldap-authentication-provider-1.user-search-base=ou=users
