--- a/server/pom.xml
+++ b/server/pom.xml
@@ -163,11 +163,11 @@
             <artifactId>security</artifactId>
             <version>1.0</version>
         </dependency>
-        <!--<dependency>
+        <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-ldap</artifactId>
-            <version>${spring.security.version}</version>
-        </dependency>-->
+            <version>3.0.5.RELEASE</version>
+        </dependency>
     </dependencies>
     <organization>
         <name>International Institute for Social History</name>
