--- a/server/pom.xml
+++ b/server/pom.xml
@@ -178,11 +178,11 @@
             <artifactId>javase</artifactId>
             <version>2.1</version>
         </dependency>
-        <!--<dependency>
+        <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
             <version>1.2.2</version>
-        </dependency>-->
+        </dependency>
     </dependencies>
     <organization>
         <name>International Institute for Social History</name>
