--- a/server/pom.xml
+++ b/server/pom.xml
@@ -166,7 +166,7 @@
         <dependency>
             <groupId>org.springframework.security</groupId>
             <artifactId>spring-security-ldap</artifactId>
-            <version>3.0.5.RELEASE</version>
+            <version>${spring.security.version}</version>
         </dependency>
         <dependency>
             <groupId>com.google.zxing</groupId>
@@ -178,13 +178,16 @@
             <artifactId>javase</artifactId>
             <version>2.1</version>
         </dependency>
-<!--
         <dependency>
             <groupId>commons-fileupload</groupId>
             <artifactId>commons-fileupload</artifactId>
             <version>1.2.2</version>
         </dependency>
--->
+        <dependency>
+            <groupId>commons-io</groupId>
+            <artifactId>commons-io</artifactId>
+            <version>2.1</version>
+        </dependency>
     </dependencies>
     <organization>
         <name>International Institute for Social History</name>
