--- a/mongodb-handlestorage/pom.xml
+++ b/mongodb-handlestorage/pom.xml
@@ -22,6 +22,13 @@
          xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
     <modelVersion>4.0.0</modelVersion>
+
+    <parent>
+        <groupId>org.socialhistoryservices</groupId>
+        <artifactId>pid</artifactId>
+        <version>1.0</version>
+    </parent>
+
     <groupId>net.handle</groupId>
     <artifactId>mongodb-handlestorage</artifactId>
     <version>7.0</version>
