--- a/mongodb-handlestorage/pom.xml
+++ b/mongodb-handlestorage/pom.xml
@@ -51,7 +51,7 @@
         <dependency>
             <groupId>org.mongodb</groupId>
             <artifactId>mongo-java-driver</artifactId>
-            <version>2.7.3</version>
+            <version>${mongodb.version}</version>
         </dependency>
         <dependency>
             <groupId>junit</groupId>
