Introducing templates object to create a transformer per thread, as a single transformer is not thread safe.

--- a/server/pid.properties
+++ b/server/pid.properties
@@ -51,7 +51,7 @@ proxy.locationUri=http://localhost:8282/secure/
 # Where the log4j.xml is that is to be used for logging configuration.
 # Logs are identical
 #
-log4j.xml=log4j.xml
+log4j.xml=./log4j.xml
 
 ldap-authentication-provider.user-search-filter=(cn={0})
 ldap-authentication-provider-1.user-search-base=ou=users
