--- a/pom.xml
+++ b/pom.xml
@@ -94,7 +94,8 @@
         <spring.security.version>3.1.0.RC3</spring.security.version>
         <spring.ws.version>2.1.3.RELEASE</spring.ws.version>
         <oauth.version>1.0.0.M5</oauth.version>
-        <mongodb.version>2.11.1</mongodb.version>
+        <mongodb.version>2.11.2</mongodb.version>
+        <handle.version>7.3</handle.version>
     </properties>
 
 </project>
