To remain consistent use same version as Handle System artifact for the mongodb driver

--- a/server/pom.xml
+++ b/server/pom.xml
@@ -142,7 +142,7 @@
         <dependency>
             <groupId>net.handle</groupId>
             <artifactId>mongodb-handlestorage</artifactId>
-            <version>7.0</version>
+            <version>${handle.version}</version>
         </dependency>
 
         <dependency>
