Add dummy resolver for integration testing

--- a/mongodb-handlestorage/pom.xml
+++ b/mongodb-handlestorage/pom.xml
@@ -59,6 +59,18 @@
             <version>4.8.1</version>
             <scope>test</scope>
         </dependency>
+        <dependency>
+            <groupId>com.google</groupId>
+            <artifactId>gson</artifactId>
+            <version>1.7.1</version>
+            <scope>test</scope>
+        </dependency>
+        <dependency>
+            <groupId>commons-codec</groupId>
+            <artifactId>commons-codec</artifactId>
+            <version>1.8</version>
+            <scope>test</scope>
+        </dependency>
     </dependencies>
 
     <repositories>
