Change gson dependency

--- a/mongodb-handlestorage/pom.xml
+++ b/mongodb-handlestorage/pom.xml
@@ -60,7 +60,7 @@
             <scope>test</scope>
         </dependency>
         <dependency>
-            <groupId>com.google</groupId>
+            <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
             <version>1.7.1</version>
             <scope>test</scope>
