Further splitting up interfaces into the core artifact

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,7 @@
     </build>
 
     <modules>
+        <module>pid-core</module>
         <module>server</module>
         <module>mongodb-handlestorage</module>
     </modules>
@@ -83,6 +84,18 @@
         <repository>
             <id>oauth.googlecode.net</id>
             <url>http://oauth.googlecode.com/svn/code/maven/</url>
+        </repository>
+        <repository>
+            <id>project-repro</id>
+            <name>lib-maven-repository</name>
+            <url>file://${basedir}/repo</url>
+            <snapshots>
+                <enabled>false</enabled>
+            </snapshots>
+            <releases>
+                <enabled>true</enabled>
+                <checksumPolicy>ignore</checksumPolicy>
+            </releases>
         </repository>
     </repositories>
 
