--- a/pid-core/pom.xml
+++ b/pid-core/pom.xml
@@ -2,7 +2,7 @@
 <!--
   ~ The PID webservice offers SOAP methods to manage the Handle System(r) resolution technology.
   ~
-  ~ Copyright (C) 2010-2011, International Institute of Social History
+  ~ Copyright (C) 2010-2013, International Institute of Social History
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -29,47 +29,15 @@
         <version>1.0</version>
     </parent>
 
-    <groupId>net.handle</groupId>
-    <artifactId>mongodb-handlestorage</artifactId>
-    <version>7.3</version>
-    <packaging>jar</packaging>
-    <build>
-        <finalName>mongodb-handlestorage</finalName>
-    </build>
+    <groupId>org.socialhistoryservices</groupId>
+    <artifactId>pid-core</artifactId>
+    <version>1.0</version>
 
     <dependencies>
         <dependency>
             <groupId>net.handle</groupId>
             <artifactId>handle</artifactId>
             <version>${handle.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>net.cnri</groupId>
-            <artifactId>util</artifactId>
-            <version>${handle.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>org.mongodb</groupId>
-            <artifactId>mongo-java-driver</artifactId>
-            <version>${mongodb.version}</version>
-        </dependency>
-        <dependency>
-            <groupId>junit</groupId>
-            <artifactId>junit</artifactId>
-            <version>4.8.1</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>com.google.code.gson</groupId>
-            <artifactId>gson</artifactId>
-            <version>1.7.1</version>
-            <scope>test</scope>
-        </dependency>
-        <dependency>
-            <groupId>commons-codec</groupId>
-            <artifactId>commons-codec</artifactId>
-            <version>1.8</version>
-            <scope>test</scope>
         </dependency>
     </dependencies>
 
