--- a/server/pom.xml
+++ b/server/pom.xml
@@ -93,6 +93,11 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.socialhistoryservices</groupId>
+            <artifactId>pid-core</artifactId>
+            <version>1.0</version>
+        </dependency>
+        <dependency>
             <groupId>org.springframework.ws</groupId>
             <artifactId>spring-ws-core</artifactId>
             <version>${spring.ws.version}</version>
