--- a/mongodb-handlestorage/pom.xml
+++ b/mongodb-handlestorage/pom.xml
@@ -2,7 +2,7 @@
 <!--
   ~ The PID webservice offers SOAP methods to manage the Handle System(r) resolution technology.
   ~
-  ~ Copyright (C) 2010-2011, International Institute of Social History
+  ~ Copyright (C) 2010-2018, International Institute of Social History
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -26,12 +26,12 @@
     <parent>
         <groupId>org.socialhistoryservices</groupId>
         <artifactId>pid</artifactId>
-        <version>1.0</version>
+        <version>1.1.1</version>
     </parent>
 
-    <groupId>net.handle</groupId>
+    <groupId>net.cnri</groupId>
     <artifactId>mongodb-handlestorage</artifactId>
-    <version>7.3</version>
+    <version>${handle.version}</version>
     <packaging>jar</packaging>
     <build>
         <finalName>mongodb-handlestorage</finalName>
@@ -39,7 +39,7 @@
 
     <dependencies>
         <dependency>
-            <groupId>net.handle</groupId>
+            <groupId>net.cnri</groupId>
             <artifactId>handle</artifactId>
             <version>${handle.version}</version>
         </dependency>
@@ -62,13 +62,13 @@
         <dependency>
             <groupId>com.google.code.gson</groupId>
             <artifactId>gson</artifactId>
-            <version>1.7.1</version>
+            <version>2.6.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>commons-codec</groupId>
             <artifactId>commons-codec</artifactId>
-            <version>1.8</version>
+            <version>1.10</version>
             <scope>test</scope>
         </dependency>
     </dependencies>
