--- a/pid-core/pom.xml
+++ b/pid-core/pom.xml
@@ -26,16 +26,15 @@
     <parent>
         <groupId>org.socialhistoryservices</groupId>
         <artifactId>pid</artifactId>
-        <version>1.0</version>
+        <version>1.1.1</version>
     </parent>
 
-    <groupId>org.socialhistoryservices</groupId>
     <artifactId>pid-core</artifactId>
     <version>1.0</version>
 
     <dependencies>
         <dependency>
-            <groupId>net.handle</groupId>
+            <groupId>net.cnri</groupId>
             <artifactId>handle</artifactId>
             <version>${handle.version}</version>
         </dependency>
