--- a/pom.xml
+++ b/pom.xml
@@ -2,7 +2,7 @@
 <!--
   ~ The PID webservice offers SOAP methods to manage the Handle System(r) resolution technology.
   ~
-  ~ Copyright (C) 2010-2011, International Institute of Social History
+  ~ Copyright (C) 2010-2018, International Institute of Social History
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -25,7 +25,7 @@
 
     <groupId>org.socialhistoryservices</groupId>
     <artifactId>pid</artifactId>
-    <version>1.0</version>
+    <version>1.1.1</version>
     <packaging>pom</packaging>
     <name>pid</name>
 
@@ -100,15 +100,15 @@
     </repositories>
 
     <properties>
-        <jdkLevel>1.6</jdkLevel>
+        <jdkLevel>1.8</jdkLevel>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
-        <spring.version>3.2.2.RELEASE</spring.version>
-        <spring.security.version>3.1.0.RC3</spring.security.version>
-        <spring.ws.version>2.1.3.RELEASE</spring.ws.version>
+        <spring.version>3.2.18.RELEASE</spring.version>
+        <spring.security.version>3.1.0.RELEASE</spring.security.version>
+        <spring.ws.version>2.1.4.RELEASE</spring.ws.version>
         <oauth.version>1.0.0.M5</oauth.version>
-        <mongodb.version>2.11.2</mongodb.version>
-        <handle.version>7.3</handle.version>
+        <mongodb.version>2.14.2</mongodb.version>
+        <handle.version>8.1.4</handle.version>
     </properties>
 
 </project>
