--- a/server/pom.xml
+++ b/server/pom.xml
@@ -2,7 +2,7 @@
 <!--
   ~ The PID webservice offers SOAP methods to manage the Handle System(r) resolution technology.
   ~
-  ~ Copyright (C) 2010-2011, International Institute of Social History
+  ~ Copyright (C) 2010-2018, International Institute of Social History
   ~
   ~ This program is free software: you can redistribute it and/or modify
   ~ it under the terms of the GNU General Public License as published by
@@ -24,7 +24,7 @@
     <parent>
         <groupId>org.socialhistoryservices</groupId>
         <artifactId>pid</artifactId>
-        <version>1.0</version>
+        <version>1.1.1</version>
     </parent>
     <artifactId>server</artifactId>
     <packaging>war</packaging>
@@ -145,7 +145,7 @@
             <version>1.2</version>
         </dependency>
         <dependency>
-            <groupId>net.handle</groupId>
+            <groupId>net.cnri</groupId>
             <artifactId>mongodb-handlestorage</artifactId>
             <version>${handle.version}</version>
         </dependency>
